@@ -30,6 +30,7 @@ Patch0:		gcc-@gcc_version@-rtems-gnat-@gnat_version@-@gcc_patch_version@.diff
 Patch1:		newlib-@newlib_version@-rtems-@newlib_patch_version@.diff
 Patch2:		gnat-@gnat_version@-rtems-@gnat_patch_version@.diff
 Patch3:		binutils-@binutils_version@-rtems-gnat-@gnat_version@-@binutils_patch_version@.diff
+Patch4:		newlib-@newlib_version@-rtems-gnat-@gnat_version@-@newlib_patch_version@.diff
 #
 Buildroot:	/tmp
 
@@ -119,9 +120,14 @@ This is gnat, gcc, and newlib C Library for @target_alias@.
 %setup -c -n @target_alias@-gnat-newlib -a 0 -a 1 -a 2 -a 3
 
 %patch0 -p0
-%patch1 -p0
 %patch2 -p0
 %patch3 -p0
+
+# this patch needs to be applied with a -p1
+cd newlib-@newlib_version@
+%patch1 -p1
+%patch4 -p1
+cd ..
 
   # this 281 needs to be a variable. :(
   cd gcc-@gcc_version@
@@ -241,6 +247,9 @@ This is gnat, gcc, and newlib C Library for @target_alias@.
   make prefix=$RPM_BUILD_ROOT/opt/gnatrtems \
      CC=gcc CFLAGS="-O2 -g -gnata -gnatp" LANGUAGES="c ada" install
   # GNAT has to be mostly installed to even build itself
+
+#  hack to get rid of symlinks to dynamic libraries that don't exist
+  find $RPM_BUILD_ROOT/opt/gnatrtems -name "*.so" | xargs -e rm -f
 
   make prefix=$RPM_BUILD_ROOT/opt/gnatrtems install-info
 
