@@ -3,15 +3,15 @@ binutils_version=2.9.1
 binutils_patch_version=20000429
 binutils_rpm_release=3
 newlib_version=1.8.2
-newlib_patch_version=20000828
+newlib_patch_version=20000907
 gcc_version=2.8.1
 gcc_patch_version=20000429
 gnat_version=3.13p
 gnat_patch_version=20000829
 gnatnewlib_rpm_release=1
 gdb_version=4.17
-gdb_patch_version=20000429
-gdb_rpm_release=3
+gdb_patch_version=20000918
+gdb_rpm_release=1
 rtems_version=NA
 rtems_rpm_release=1
 rpm_build_root=/tmp
